packages/layout/src/scss/_sidebar-right-layout.scss
@use "@uqds/core/src/scss/global" as core;

.uq-sidebar-right-layout {
  display: flex;
  flex-direction: column;
  gap: 32px;

  @media #{core.$screen-lg-up} {
    display: grid;
    gap: 32px;
    grid-template-columns:
      1fr
      296px;
  }

  @media #{core.$screen-xl-up} {
    grid-template-columns:
      1fr
      308px;
  }
}

.uq-sidebar-right-layout__sidebar {
  grid-column: 2 / span 1;
}

.uq-sidebar-right-layout__main {
  grid-column: 1 / span 1;
}

